WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
22660
SVG elements that are moved are nor fully invalidated/earsed
https://bugs.webkit.org/show_bug.cgi?id=22660
Summary
SVG elements that are moved are nor fully invalidated/earsed
Yoah Bar-David
Reported
2008-12-04 14:04:18 PST
See attached example, click the "Click here" label. The red ball is moved but about half of it is still shown on the previous position. Repeated also in Google Chrome.
Attachments
Sample file. Click the "click here" to see the bug, refresh page to repeat
(733 bytes, text/xml)
2008-12-04 14:05 PST
,
Yoah Bar-David
no flags
Details
First attempt
(19.96 KB, patch)
2008-12-06 10:46 PST
,
Rob Buis
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Yoah Bar-David
Comment 1
2008-12-04 14:05:40 PST
Created
attachment 25752
[details]
Sample file. Click the "click here" to see the bug, refresh page to repeat
Rob Buis
Comment 2
2008-12-06 10:46:47 PST
Created
attachment 25816
[details]
First attempt Here is my fix for this problem. I am afraid a pixel test is needed to really expose this bug. Cheers, Rob.
Eric Seidel (no email)
Comment 3
2008-12-08 12:54:42 PST
Mitz or Hyatt could better tell if this is right.
Darin Adler
Comment 4
2009-01-02 10:54:06 PST
Comment on
attachment 25816
[details]
First attempt r=me
Rob Buis
Comment 5
2009-01-04 09:37:18 PST
Landed in
r39574
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug