        Reviewed by Darin.

https://bugs.webkit.org/show_bug.cgi?id=22660
        SVG elements that are moved are nor fully invalidated/earsed

        Mark the SVG root as needing a layout when its position changes.

        Tests: svg/custom/circle-move-invalidation.svg

git-svn-id: svn://svn.chromium.org/blink/trunk@39574 bbb929c8-8fbe-4397-9dbb-9b2b20218538