third_party/WebKit/WebCore/rendering/RenderSVGRoot.h
@@ -64,6 +64,8 @@ public:
     FloatRect viewport() const;
 
     virtual bool nodeAtPoint(const HitTestRequest&, HitTestResult&, int x, int y, int tx, int ty, HitTestAction);
+
+    virtual void position(InlineBox*);
     
 private:
     void calcViewport(); 
